--- a/my-app/package.json
+++ b/my-app/package.json
@@ -7,11 +7,19 @@
     "@emotion/css": "^11.11.2",
     "@emotion/react": "^11.11.4",
     "@emotion/styled": "^11.11.5",
+    "@stripe/react-stripe-js": "^2.7.3",
+    "@stripe/stripe-js": "^4.1.0",
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "axios": "^1.7.2",
+    "body-parser": "^1.20.2",
+    "cors": "^2.8.5",
+    "dotenv": "^16.4.5",
+    "express": "^4.19.2",
     "framer-motion": "^11.3.6",
+    "mysql": "^2.18.1",
+    "mysql2": "^3.10.3",
     "react": "^18.3.1",
     "react-carousel-minimal": "^1.4.1",
     "react-dom": "^18.3.1",
@@ -21,13 +29,16 @@
     "react-slick": "^0.30.2",
     "sass": "^1.77.8",
     "slick-carousel": "^1.8.1",
+    "stripe": "^16.2.0",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
     "start": "react-scripts start",
+    "server": "node server.js",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "dev": "concurrently \"npm run server\" \"npm start\""
   },
   "eslintConfig": {
     "extends": [
@@ -46,5 +57,10 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  
+  
+  "devDependencies": {
+    "concurrently": "^8.2.2"
   }
 }
