--- a/my-app/package.json
+++ b/my-app/package.json
@@ -13,11 +13,13 @@
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "axios": "^1.7.2",
+    "bcrypt": "^5.1.1",
     "body-parser": "^1.20.2",
     "cors": "^2.8.5",
     "dotenv": "^16.4.5",
     "express": "^4.19.2",
     "framer-motion": "^11.3.6",
+    "jsonwebtoken": "^9.0.2",
     "mysql": "^2.18.1",
     "mysql2": "^3.10.3",
     "react": "^18.3.1",
@@ -58,8 +60,6 @@
       "last 1 safari version"
     ]
   },
-  
-  
   "devDependencies": {
     "concurrently": "^8.2.2"
   }
